# OpenStereo

./: .gitignore  LICENSE  README.md  Stereo_Matching_Paper_List.md  requirements.txt  run.sh  test.py  test.sh  test_data.py  train.sh
cfgs/: data_basic.py  driving_eval.yaml  eth3d_eval.yaml  kitti12_eval.yaml  kitti15_eval.yaml  middlebury_eval.yaml  sceneflow_eval.yaml
cfgs/aanet/: aanet_sceneflow.yaml
cfgs/casnet/: casnet_psm_sceneflow.yaml  casnet_psm_sceneflow_amp.yaml
cfgs/cfnet/: cfnet_sceneflow_part2.yaml
cfgs/coex/: coex_sceneflow_amp.yaml
cfgs/fadnet/: fadnet_sceneflow.yaml
cfgs/gwcnet/: gwcnet_sceneflow.yaml
cfgs/igev/: igev_kitti_amp.yaml  igev_sceneflow_amp.yaml
cfgs/iinet/: iinet_pretrain_sceneflow.yaml  iinet_sceneflow.yaml
cfgs/lightstereo/: lightstereo_l_kitti.yaml  lightstereo_l_sceneflow.yaml  lightstereo_lx_kitti.yaml  lightstereo_lx_sceneflow.yaml  lightstereo_m_kitti.yaml  lightstereo_m_sceneflow.yaml  lightstereo_s_kitti.yaml  lightstereo_s_sceneflow.yaml
cfgs/msnet/: msnet2d_sceneflow.yaml  msnet3d_sceneflow.yaml
cfgs/psmnet/: psmnet_kitti.yaml  psmnet_sceneflow.yaml
cfgs/sttr/: sttr_flyingthings3d.yaml
configs/: default.yaml
configs/aanet/: AANet_driving_stereo.yaml  AANet_drivingstereo.yaml  AANet_eth.yaml  AANet_kitti.yaml  AANet_kitti15.yaml  AANet_mid.yaml  AANet_sceneflow.yaml  aanet_sceneflow.yaml
configs/acvnet/: ACVNet_Kitti15.yaml  ACVNet_SceneFlow_abbandon.yaml  ACVNet_eth.yaml  ACVNet_kitti.yaml  ACVNet_mid.yaml  ACVNet_sceneflow.yaml  ACVNet_sceneflow_part1.yaml  ACVNet_sceneflow_part2.yaml  ACVNet_sceneflow_part3.yaml  ACV_driving_stereo.yaml
configs/avcnet/: AVCNet_SceneFlow.yaml
configs/baseline/: baseline_PSMNet.yaml
configs/casnet/: CasNet_drivingstereo.yaml  CasNet_eth.yaml  CasNet_gwc_sceneflow_amp.yaml  CasNet_kitti.yaml  CasNet_mid.yaml  CasNet_psm_driving_stereo_half_amp.yaml  CasNet_psm_kitti12_amp.yaml  CasNet_psm_kitti15_amp.yaml  CasNet_psm_sceneflow_amp.yaml  CasNet_sceneflow.yaml  CasNet_sceneflow_fp16_g1.yaml  CasNet_sceneflow_g1.yaml  CasNet_sceneflow_g2.yaml  CasNet_sceneflow_g8.yaml  CasNet_sceneflow_gwc_amp.yaml
configs/cfnet/: CFNet_driving_stereo_half.yaml  CFNet_drivingstereo.yaml  CFNet_eth.yaml  CFNet_kitti.yaml  CFNet_kitti12.yaml  CFNet_kitti12_g2.yaml  CFNet_kitti15.yaml  CFNet_kitti15_g2.yaml  CFNet_mid.yaml  CFNet_sceneflow.yaml  CFNet_sceneflow_g1.yaml  CFNet_sceneflow_g2.yaml  CFNet_sceneflow_g8_part1.yaml  CFNet_sceneflow_g8_part2.yaml  CFNet_sceneflow_part1.yaml  CFNet_sceneflow_part2.yaml
configs/coex/: CoExNet_driving_stereo_amp.yaml  CoExNet_driving_stereo_full_amp.yaml  CoExNet_driving_stereo_g1.yaml  CoExNet_driving_stereo_half_amp.yaml  CoExNet_drivingstereo.yaml  CoExNet_eth.yaml  CoExNet_kitti.yaml  CoExNet_kitti12_amp.yaml  CoExNet_kitti15_amp.yaml  CoExNet_mid.yaml  CoExNet_sceneflow.yaml  CoExNet_sceneflow_amp.yaml  CoExNet_sceneflow_fp16_g1.yaml  CoExNet_sceneflow_g1.yaml
configs/dsmnet/: DSMNet1x_sceneflow.yaml  DSMNet2x_sceneflow.yaml
configs/fadnet/: FADNet_driving_stereo.yaml  FADNet_drivingstereo.yaml  FADNet_eth.yaml  FADNet_kitti.yaml  FADNet_kitti15.yaml  FADNet_mid.yaml  FADNet_sceneflow.yaml  fadnet_sceneflow.yaml
configs/ganet/: GANet_sceneflow.yaml  GaNet_driving_stereo_half_amp.yaml  GaNet_kitti12.yaml  GaNet_kitti15.yaml  GaNet_sceneflow.yaml  GaNet_sceneflow_g8.yaml
configs/gwcnet/: GwcNet_driving_stereo_half_amp.yaml  GwcNet_drivingstereo.yaml  GwcNet_eth.yaml  GwcNet_kitti.yaml  GwcNet_kitti12.yaml  GwcNet_kitti15.yaml  GwcNet_mid.yaml  GwcNet_sceneflow.yaml  GwcNet_sceneflow_amp.yaml  GwcNet_sceneflow_g1.yaml  GwcNet_sceneflow_g8.yaml  GwcNet_sceneflow_g8_ori.yaml
configs/igev/: IGEV_sceneflow.yaml  igev_drivingstereo.yaml  igev_eth.yaml  igev_kitti.yaml  igev_kitti_val.yaml  igev_mid.yaml  igev_sceneflow.yaml
configs/lacgwcnet/: LacGwcNet_driving_stereo_half_amp.yaml  LacGwcNet_kitti12_amp.yaml  LacGwcNet_kitti12_finetune.yaml  LacGwcNet_kitti15_amp.yaml  LacGwcNet_kitti15_finetune.yaml  LacGwcNet_sceneflow.yaml  LacGwcNet_sceneflow_amp.yaml  LacGwcNet_sceneflow_fp16.yaml  LacGwcNet_sceneflow_g1.yaml  LacGwcNet_sceneflow_g1_debug.yaml  LacGwcNet_sceneflow_g2.yaml  LacGwcNet_sceneflow_g8.yaml
configs/msnet/: MSNet2D_drivingstereo_amp.yaml  MSNet2D_eth.yaml  MSNet2D_kitti.yaml  MSNet2D_kitti12_amp.yaml  MSNet2D_kitti15_amp.yaml  MSNet2D_mid.yaml  MSNet2D_sceneflow.yaml  MSNet2D_sceneflow_amp.yaml  MSNet3D_driving_stereo_half_amp.yaml  MSNet3D_drivingstereo_amp.yaml  MSNet3D_eth.yaml  MSNet3D_kitti.yaml  MSNet3D_kitti12_amp.yaml  MSNet3D_mid.yaml  (+3 more)
data/: SceneFlow  kitti12
datasets/: README.md
deploy/: README.md  README.zh.md  deploy_utils.py  export.py  trt_profile.sh
deploy/cpp/: CMakeLists.txt  main.cpp
deploy/cpp/include/: inference.h  transforms.h  transforms_kernel.h  utils.h
deploy/cpp/src/: inference.cpp  transforms.cpp  transforms_kernel.cu
docs/: 0.get_started.md  1.model_zoo.md  2.prepare_dataset.md  3.detailed_config.md  4.how_to_create_your_model.md  5.advanced_usages.md
logs/: avc.txt  raft_stereo.txt  raft_stereo_rein.txt  sttr_stereo.txt
openstereo/: base_trainer.py  compile_libs.sh  convert_weights.py  main.py  new_main.py  test_dataset.py  test_model.py  trainer.py
scripts/: run.sh  run_aanet_kitti.sh  run_aanet_sceneflow.sh  run_cas_g1.sh  run_cf_g1.sh  run_debug_avc.sh  run_debug_raft.sh  run_debug_sttr.sh  run_fadnet_kitti.sh  run_fadnet_sceneflow.sh  run_ga_g8.sh  run_gwc_g1.sh  run_lac_g8.sh  run_sceneflow.sh  test.sh  train.sh  train_kitti.sh  transfer_sttr_data_to_txt.py
stereo/: __init__.py
tools/: eval.py  infer.py  measure.py  test_kitti.py  train.py
(+407 files in other folders)
